Create basic files and nav. Style nav for desktop and mobile.

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,3 +3,17 @@ PROJECT STYLES
 ==============
 Imports all project style components.
 */
+
+// Mixins
+@import "mixins/media-breakpoints";
+
+//Base
+@import "base/general";
+@import "base/typography";
+
+// Modules
+@import "modules/nav";
+@import "modules/header";
+
+// Variables
+@import "variables/factors.scss";
