Add basic structure to header.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -182,3 +182,11 @@ html {
     padding-top: 18px;
     display: block;
     box-sizing: content-box; }
+
+.header {
+  background: url("../images/photos/header.png");
+  background-position: bottom center;
+  background-size: cover; }
+
+.jumbotron {
+  height: 772px; }
