Fix nav styles and add some styles to jumbotron

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -12,16 +12,16 @@ Imports all project style components.
   font-family: 'Open Sans'; }
 
 html {
-  font-size: 14.94px; }
+  font-size: 15px; }
   @media all and (max-width: 1400px) {
     html {
-      font-size: 13.14px; } }
+      font-size: 13px; } }
   @media all and (max-width: 1199px) {
     html {
-      font-size: 11.34px; } }
+      font-size: 11px; } }
   @media all and (max-width: 991px) {
     html {
-      font-size: 9.36px; } }
+      font-size: 10px; } }
 
 .wrapper {
   width: 100%;
@@ -29,28 +29,24 @@ html {
   min-width: 280px;
   margin: 0 auto; }
 
-.nav__text {
-  color: #003f8c;
-  font-size: 1.3rem;
-  font-weight: 400; }
-
 .nav {
   width: 100%;
   background-color: #96cccc;
   height: 125px;
-  padding: 0 50px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   border-top: 8px solid #d5d5d5; }
   @media all and (max-width: 991px) {
     .nav {
-      padding: 0 15px; } }
+      padding: 0 15px;
+      height: 90px; } }
   @media all and (max-width: 767px) {
     .nav {
       flex-wrap: wrap;
-      height: 250px;
-      padding: 0; } }
+      height: 180px;
+      padding: 0;
+      padding-bottom: 5px; } }
   @media all and (max-width: 575px) {
     .nav {
       height: auto; } }
@@ -58,64 +54,40 @@ html {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    width: calc(582px * 0.83); }
-    @media all and (max-width: 1400px) {
-      .nav__list {
-        width: calc(582px * 0.73); } }
-    @media all and (max-width: 1199px) {
-      .nav__list {
-        width: calc(582px * 0.63); } }
-    @media all and (max-width: 991px) {
-      .nav__list {
-        width: auto; } }
+    padding: 0 30px; }
     @media all and (max-width: 767px) {
       .nav__list {
-        width: 50%;
-        height: 125px;
         justify-content: space-around; } }
     @media all and (max-width: 575px) {
       .nav__list {
         width: 100%;
-        flex-wrap: wrap;
         height: auto;
+        padding: 0;
+        flex-wrap: wrap;
         justify-content: flex-start; } }
-  .nav__list--left {
-    padding-right: calc(81px * 0.83); }
-    @media all and (max-width: 1400px) {
-      .nav__list--left {
-        padding-right: calc(81px * 0.73); } }
-    @media all and (max-width: 1199px) {
-      .nav__list--left {
-        padding-right: calc(81px * 0.63); } }
+  @media all and (max-width: 767px) {
+    .nav__list--left {
+      order: 2;
+      padding-right: 0; } }
+  @media all and (max-width: 767px) {
+    .nav__list--right {
+      order: 3;
+      padding-left: 0; } }
+  .nav__list-item {
+    padding: 0 20px; }
     @media all and (max-width: 991px) {
-      .nav__list--left {
-        padding-right: 10px; } }
-    @media all and (max-width: 767px) {
-      .nav__list--left {
-        order: 2;
-        padding-right: 0; } }
-  .nav__list--right {
-    padding-left: calc(81px * 0.83); }
-    @media all and (max-width: 1400px) {
-      .nav__list--right {
-        padding-left: calc(81px * 0.73); } }
-    @media all and (max-width: 1199px) {
-      .nav__list--right {
-        padding-left: calc(81px * 0.63); } }
-    @media all and (max-width: 991px) {
-      .nav__list--right {
-        padding-left: 10px; } }
-    @media all and (max-width: 767px) {
-      .nav__list--right {
-        order: 3;
-        padding-left: 0; } }
-  @media all and (max-width: 991px) {
-    .nav__list-item {
-      padding: 0 10px; } }
-  @media all and (max-width: 575px) {
-    .nav__list-item {
-      width: 100%;
-      height: 35px; } }
+      .nav__list-item {
+        padding: 0 10px; } }
+    @media all and (max-width: 575px) {
+      .nav__list-item {
+        width: 100%;
+        height: 35px; } }
+  .nav__link {
+    cursor: pointer; }
+  .nav__text {
+    color: #003f8c;
+    font-size: 1.3rem;
+    font-weight: 400; }
   .nav__list-item--location {
     display: flex;
     align-items: center; }
@@ -124,14 +96,8 @@ html {
       width: 50px;
       height: 45px; } }
   .nav__logo-container {
-    width: 395px;
+    width: 25%;
     position: relative; }
-    @media all and (max-width: 1400px) {
-      .nav__logo-container {
-        width: 347px; } }
-    @media all and (max-width: 1199px) {
-      .nav__logo-container {
-        width: 300px; } }
     @media all and (max-width: 767px) {
       .nav__logo-container {
         order: 1;
@@ -141,41 +107,35 @@ html {
 
 .logo {
   position: absolute;
+  top: -8px;
   width: 100%;
-  height: calc(239px * 0.83);
-  padding-top: calc(29px * 0.83);
+  padding: 25px 0;
   background-color: #003f8c;
   border: 8px solid #fff;
   border-top: none; }
-  @media all and (max-width: 1400px) {
+  @media all and (max-width: 991px) {
     .logo {
-      padding-top: calc(29px * 0.73);
-      height: calc(239px * 0.73); } }
-  @media all and (max-width: 1199px) {
-    .logo {
-      padding-top: alc(18.27px);
-      height: calc(239px * 0.63); } }
+      padding: 20px 0; } }
   @media all and (max-width: 767px) {
     .logo {
       width: auto;
       height: 100%;
       border: none;
+      top: 0;
       left: 50%;
       transform: translateX(-50%); } }
   .logo__stars-group {
     display: flex;
     justify-content: center;
-    height: calc(41px * 0.83);
+    height: 34px;
     box-sizing: content-box; }
-    @media all and (max-width: 1400px) {
-      .logo__stars-group {
-        height: calc(41px * 0.73); } }
-    @media all and (max-width: 1199px) {
-      .logo__stars-group {
-        height: calc(41px * 0.63); } }
     @media all and (max-width: 991px) {
       .logo__stars-group {
-        height: calc(41px * 0.52); } }
+        height: 21px;
+        padding: 0 20px; } }
+  @media all and (max-width: 991px) {
+    .logo__star-elem {
+      width: 30px; } }
   .logo__image {
     width: 60%;
     margin: 0 auto;
@@ -189,4 +149,15 @@ html {
   background-size: cover; }
 
 .jumbotron {
-  height: 772px; }
+  height: 772px;
+  width: 60%;
+  margin: 0 auto;
+  background-color: #003f8cc0; }
+  .jumbotron__title {
+    max-width: 75%;
+    margin: 0 auto;
+    font-size: 4.8rem;
+    font-family: "Playfair Display", serif;
+    color: #fff;
+    font-weight: 400;
+    text-align: center; }
