--- a/app/scss/modules/_nav.scss
+++ b/app/scss/modules/_nav.scss
@@ -2,7 +2,6 @@
   width: 100%;
   background-color: rgb(150, 204, 204);
   height: 125px;
-  padding: 0 50px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
@@ -10,12 +9,14 @@
 
   @media #{$max991} {
     padding: 0 15px;
+    height: 90px;
   }
 
   @media #{$max767} {
     flex-wrap: wrap;
-    height: 250px;
+    height: 180px;
     padding: 0;
+    padding-bottom: 5px;
   }
 
   @media #{$max575} {
@@ -26,49 +27,22 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    width: calc(582px * 0.83);
-
-    @media #{$max1400} {
-      width: calc(582px * 0.73);
-    }
-
-    @media #{$max1199} {
-      width: calc(582px * 0.63);
-    }
-
-    @media #{$max991} {
-      width: auto;
-    }
+    padding: 0 30px;
 
     @media #{$max767} {
-      width: 50%;
-      height: 125px;
       justify-content: space-around;
     }
 
     @media #{$max575} {
       width: 100%;
-      flex-wrap: wrap;
       height: auto;
+      padding: 0;
+      flex-wrap: wrap;
       justify-content: flex-start;
     }
   }
 
   &__list--left {
-    padding-right: calc(81px * 0.83);
-
-    @media #{$max1400} {
-      padding-right: calc(81px * 0.73);
-    }
-
-    @media #{$max1199} {
-      padding-right: calc(81px * 0.63);
-    }
-
-    @media #{$max991} {
-      padding-right: 10px;
-    }
-
     @media #{$max767} {
       order: 2;
       padding-right: 0;
@@ -76,28 +50,14 @@
   }
 
   &__list--right {
-    padding-left: calc(81px * 0.83);
-
-    @media #{$max1400} {
-      padding-left: calc(81px * 0.73);
-    }
-
-    @media #{$max1199} {
-      padding-left: calc(81px * 0.63);
-    }
-
-    @media #{$max991} {
-      padding-left: 10px;
-    }
-
     @media #{$max767} {
       order: 3;
       padding-left: 0;
-      // padding-right: 10px;
     }
   }
 
   &__list-item {
+    padding: 0 20px;
     @media #{$max991} {
       padding: 0 10px;
     }
@@ -106,6 +66,16 @@
       width: 100%;
       height: 35px;
     }
+  }
+
+  &__link {
+    cursor: pointer;
+  }
+
+  &__text {
+    color: #003f8c;
+    font-size: 1.3rem;
+    font-weight: 400;
   }
 
   &__list-item--location {
@@ -121,16 +91,8 @@
   }
 
   &__logo-container {
-    width: 395px;
+    width: 25%;
     position: relative;
-
-    @media #{$max1400} {
-      width: 347px;
-    }
-
-    @media #{$max1199} {
-      width: 300px;
-    }
 
     @media #{$max767} {
       order: 1;
@@ -143,27 +105,22 @@
 
 .logo {
   position: absolute;
+  top: -8px;
   width: 100%;
-  height: calc(239px * 0.83);
-  padding-top: calc(29px * 0.83);
+  padding: 25px 0;
   background-color: #003f8c;
   border: 8px solid #fff;
   border-top: none;
 
-  @media #{$max1400} {
-    padding-top: calc(29px * 0.73);
-    height: calc(239px * 0.73);
-  }
-
-  @media #{$max1199} {
-    padding-top: alc(29px * 0.63);
-    height: calc(239px * 0.63);
+  @media #{$max991} {
+    padding: 20px 0;
   }
 
   @media #{$max767} {
     width: auto;
     height: 100%;
     border: none;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -171,19 +128,18 @@
   &__stars-group {
     display: flex;
     justify-content: center;
-    height: calc(41px * 0.83);
+    height: 34px;
     box-sizing: content-box;
 
-    @media #{$max1400} {
-      height: calc(41px * 0.73);
-    }
-
-    @media #{$max1199} {
-      height: calc(41px * 0.63);
-    }
-
     @media #{$max991} {
-      height: calc(41px * 0.52);
+      height: 21px;
+      padding: 0 20px;
+    }
+  }
+
+  &__star-elem {
+    @media #{$max991} {
+      width: 30px;
     }
   }
 
