--- a/app/scss/base/_general.scss
+++ b/app/scss/base/_general.scss
@@ -8,18 +8,18 @@
 }
 
 html {
-    font-size: 18px * 0.83;
+    font-size: 15px;
 
     @media #{$max1400} {
-        font-size: 18px * 0.73;
+        font-size: 13px;
     }
 
     @media #{$max1199} {
-        font-size: 18px * 0.63;
+        font-size: 11px;
     }
 
     @media #{$max991} {
-        font-size: 18px * 0.52;
+        font-size: 10px;
     }
 }
 
