--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -6,4 +6,22 @@
 
 .jumbotron {
     height: 772px;
+    width: 60%;
+    margin: 0 auto;
+    background-color: #003f8cc0;
+
+    &__title {
+        max-width: 75%;
+        margin: 0 auto;
+        font-size: 4.8rem;
+        font-family: $other-font;
+        color: #fff;
+        font-weight: 400;
+        text-align: center;
+        
+    }
+}
+
+.form {
+
 }
