Finish first main section for desktop and mobile

--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -103,6 +103,11 @@
       background-color: #fff;
       background-repeat: no-repeat;
       background-position: 95% center;
+
+      &:focus {
+        background: none;
+        background-color: #fff;
+      }
     }
     &--select {
       appearance: none;
