--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -16,7 +16,9 @@ Imports all project style components.
 
 //Components
 @import "components/button";
+@import "components/stars";
 
 // Modules
 @import "modules/nav";
 @import "modules/header";
+@import "modules/section";
