--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -27,7 +27,11 @@ html {
   width: 100%;
   max-width: 1600px;
   min-width: 280px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  overflow: hidden; }
+
+.basic-text {
+  font-size: 1rem; }
 
 .btn {
   background-color: #ffb01e;
@@ -37,9 +41,14 @@ html {
   outline: none;
   font-size: 1.3rem; }
 
+.stars-group {
+  display: flex;
+  justify-content: center;
+  box-sizing: content-box; }
+
 .nav {
   width: 100%;
-  background-color: #96cccc;
+  background-color: #fff;
   height: 125px;
   display: flex;
   flex-wrap: nowrap;
@@ -140,16 +149,13 @@ html {
       left: 50%;
       transform: translateX(-50%); } }
   .logo__stars-group {
-    display: flex;
-    justify-content: center;
-    height: 34px;
-    box-sizing: content-box; }
+    height: 34px; }
     @media all and (max-width: 991px) {
       .logo__stars-group {
         height: 21px;
         padding: 0 20px; } }
   @media all and (max-width: 991px) {
-    .logo__star-elem {
+    .logo .star-elem--logo {
       width: 30px; } }
   .logo__image {
     width: 60%;
@@ -248,6 +254,9 @@ html {
       background-color: #fff;
       background-repeat: no-repeat;
       background-position: 95% center; }
+      .form__input--date:focus {
+        background: none;
+        background-color: #fff; }
     .form__input--select {
       appearance: none;
       background: url("../../images/icons/arrow-down.svg");
@@ -287,3 +296,83 @@ html {
     width: 37px;
     display: block;
     margin: 0 auto; }
+
+.section {
+  padding: 5.5rem 13.6rem; }
+  @media all and (max-width: 991px) {
+    .section {
+      padding: 50px 100px; } }
+  @media all and (max-width: 767px) {
+    .section {
+      padding: 30px; } }
+  .section__title-container {
+    position: relative;
+    padding-bottom: 2.8rem; }
+  .section__title {
+    font-size: 2.7rem;
+    color: #003f8c;
+    text-transform: uppercase;
+    font-weight: normal;
+    width: 150px;
+    line-height: 2.7rem;
+    padding-top: 10px;
+    padding-bottom: 1rem; }
+  .section__title-stripe {
+    border-bottom: 2px solid #003f8c;
+    width: 62%;
+    position: absolute;
+    top: 30px;
+    left: 150px;
+    z-index: 2; }
+  .section__stars-group {
+    width: 100px;
+    justify-content: space-between; }
+  .section .star-elem--section {
+    width: 20px; }
+  .section__container {
+    display: flex;
+    flex-wrap: wrap; }
+  .section__content {
+    width: 63%;
+    text-align: justify;
+    display: inline-block;
+    padding-right: 8.2rem;
+    padding-bottom: 1rem; }
+    @media all and (max-width: 991px) {
+      .section__content {
+        padding-right: 50px; } }
+    @media all and (max-width: 767px) {
+      .section__content {
+        padding-right: 30px; } }
+    @media all and (max-width: 575px) {
+      .section__content {
+        width: 100%;
+        padding-right: 0; } }
+  .section__content-part {
+    padding-bottom: 1.3rem; }
+    .section__content-part--padding-btm {
+      padding-bottom: 3.5rem; }
+  .section__btn {
+    width: 18.3rem;
+    height: 5.5rem; }
+  .section__image-container {
+    width: 37%;
+    display: inline-block;
+    position: relative; }
+    @media all and (max-width: 575px) {
+      .section__image-container {
+        display: none; } }
+  .section__image {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 145%;
+    background: url("../../images/photos/hotel_1.png");
+    background-size: cover; }
+    @media all and (max-width: 1400px) {
+      .section__image {
+        height: 140%; } }
+    @media all and (max-width: 767px) {
+      .section__image {
+        height: 100%;
+        top: -30px; } }
