--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -17,6 +17,7 @@ Imports all project style components.
 //Components
 @import "components/button";
 @import "components/stars";
+@import "components/section-title";
 
 // Modules
 @import "modules/nav";
